--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,73 @@
-# Compiled class file
-*.class
+package Jogadores;
 
-# Log file
-*.log
+import java.util.LinkedList;
+import java.util.Scanner;
 
-# BlueJ files
-*.ctxt
+public class main {
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+    public static void main(String[] args) {
+        Scanner entrada = new Scanner(System.in);
+        int opcao = 0;
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+        LinkedList<Jogadores>listaDeJogadores = new LinkedList<Jogadores>();
+        listaDeJogadores.add(new Jogadores(null, null, null));
+        listaDeJogadores.add(new Jogadores("Wesley", "Miguel Asmita", "criativo"));
+        listaDeJogadores.add(new Jogadores("Matheus", "Tyler Hakon", "Esquentado"));
+        listaDeJogadores.add(new Jogadores("Caio", "Dentes", "ator"));
+        listaDeJogadores.add(new Jogadores("Diego", "Doodle", "silencioso"));
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+while (opcao!=5) {
+    System.out.println("\n ---------Menu de Jogadores---------");
+    System.out.println("1. Cadastrar novo jogador");
+    System.out.println("2. Remover jogador");
+    System.out.println("3. Mostrar jogadores");
+    System.out.println("4. Acessar jogador");
+    System.out.println("5. Sair");
+    opcao = entrada.nextInt();
+    entrada.nextLine();
+
+    switch (opcao) {
+        case 1:
+            System.out.println("Digite o nome do novo jogador, o nome do seu personagem e seu temperamento: ");
+            String nomeDoJogador = entrada.nextLine();
+            System.out.println("Digite o nome do personagem do jogador: ");
+            String nomeDoPersonagem = entrada.nextLine();
+            System.out.println("Digite o temperamento do jogador: ");
+            String temperamento = entrada.nextLine();
+            listaDeJogadores.addLast(new Jogadores(nomeDoJogador, nomeDoPersonagem, temperamento));
+
+            System.out.println("Jogador adicionado com sucesso!");
+
+            break;
+
+        case 2:
+            for (Jogadores jogadores: listaDeJogadores)
+                System.out.println(jogadores);
+            System.out.println("Qual jogador você deseja remover?");
+            Jogadores JogadorARemover = listaDeJogadores.remove(entrada.nextInt());
+            System.out.println("Jogador removido com sucesso!");
+            break;
+
+
+        case 3:
+            for (Jogadores jogadores: listaDeJogadores)
+            System.out.println(jogadores);
+            break;
+
+        case 4:
+            System.out.println("Qual jogador você procura?");
+            Jogadores JogadorEscolhido = listaDeJogadores.get(entrada.nextInt());
+            System.out.println(JogadorEscolhido);
+            break;
+
+        case 5:
+            System.out.println("Saindo...");
+            break;
+        default:
+            System.out.println("Essa opção não é válida");
+
+    }
+
+}
+        }
+    }
